src/main/java/com/example/study/practical_programming/self/bad/concert/domain/Concert.java
package com.example.study.practical_programming.self.bad.concert.domain;

import java.util.List;

public class Concert {
    private Long concertId;
    private List<Seat> seatList;
}
